// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture snapshots > real/fcps-school-district.ics 1`] = `
{
  "calendarName": "Calendar",
  "config": {
    "includeDescription": true,
    "targetTimezone": "America/New_York",
    "windowEnd": "2028-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-04-27T04:00:00.000Z -> 2026-04-28T04:00:00.000Z [all-day] (America/New_York) "Unified Track & Field Meet @GTJHS" desc="Unified Track & Field Meet @GTJHS"",
    "2026-04-29T04:00:00.000Z -> 2026-04-30T04:00:00.000Z [all-day] (America/New_York) "Elementary Honors Chorus @Weinberg Center" desc="Elementary Honors Chorus @Weinberg Center"",
    "2026-05-01T04:00:00.000Z -> 2026-05-02T04:00:00.000Z [all-day] (America/New_York) "2 Hour early dismissal" desc="2 Hour early dismissal"",
    "2026-05-01T04:00:00.000Z -> 2026-05-02T04:00:00.000Z [all-day] (America/New_York) "Law Day" desc="Law Day"",
    "2026-05-01T04:00:00.000Z -> 2026-05-02T04:00:00.000Z [all-day] (America/New_York) "Mid term" desc="Mid term"",
    "2026-05-01T04:00:00.000Z -> 2026-05-02T04:00:00.000Z [all-day] (America/New_York) "School Lunch Hero Day" desc="School Lunch Hero Day"",
    "2026-05-04T04:00:00.000Z -> 2026-05-05T04:00:00.000Z [all-day] (America/New_York) "ESSL Star Wars Night" desc="ESSL Star Wars Night"",
    "2026-05-05T04:00:00.000Z -> 2026-05-06T04:00:00.000Z [all-day] (America/New_York) "Cinco de Mayo" desc="Cinco de Mayo"",
    "2026-05-05T04:00:00.000Z -> 2026-05-06T04:00:00.000Z [all-day] (America/New_York) "National Teacher Day" desc="National Teacher Day"",
    "2026-05-06T04:00:00.000Z -> 2026-05-07T04:00:00.000Z [all-day] (America/New_York) "National Bike & Roll to School Day" desc="National Bike & Roll to School Day"",
    "2026-05-06T04:00:00.000Z -> 2026-05-07T04:00:00.000Z [all-day] (America/New_York) "National School Nurse Day" desc="National School Nurse Day"",
    "2026-05-06T04:00:00.000Z -> 2026-05-07T04:00:00.000Z [all-day] (America/New_York) "Tennis Tournament @ Baker Park" desc="Tennis Tournament @ Baker Park"",
    "2026-05-07T04:00:00.000Z -> 2026-05-08T04:00:00.000Z [all-day] (America/New_York) "Outdoor Track & Field Meet @THS" desc="Outdoor Track & Field Meet @THS"",
    "2026-05-07T04:00:00.000Z -> 2026-05-08T04:00:00.000Z [all-day] (America/New_York) "Tennis Tournament @FHS" desc="Tennis Tournament @FHS"",
    "2026-05-08T04:00:00.000Z -> 2026-05-09T04:00:00.000Z [all-day] (America/New_York) "Tennis Tournament @Baker Park" desc="Tennis Tournament @Baker Park"",
    "2026-05-08T04:00:00.000Z -> 2026-05-09T04:00:00.000Z [all-day] (America/New_York) "World Red Cross Day" desc="World Red Cross Day"",
    "2026-05-10T04:00:00.000Z -> 2026-05-11T04:00:00.000Z [all-day] (America/New_York) "Mother's Day" desc="Mother's Day"",
    "2026-05-11T04:00:00.000Z -> 2026-05-12T04:00:00.000Z [all-day] (America/New_York) "Public textbook display" desc="Public textbook display"",
    "2026-05-12T04:00:00.000Z -> 2026-05-13T04:00:00.000Z [all-day] (America/New_York) "ES (grades 4-5) Hugh B. Nolan Track & Field Event (rain date 5/19)" desc="ES (grades 4-5) Hugh B. Nolan Track & Field Event (rain date 5/19)"",
    "2026-05-13T04:00:00.000Z -> 2026-05-14T04:00:00.000Z [all-day] (America/New_York) "Interim Reports issued" desc="Interim Reports issued"",
    "2026-05-13T04:00:00.000Z -> 2026-05-14T04:00:00.000Z [all-day] (America/New_York) "Postponed: MS Hugh B. Nolan Track & Field Event (rain date 5/19)" desc="<p>Postponed- rescheduled to Tuesday, May 19.</p>\\n<p>MS Hugh B. Nolan Track &amp; Field Event (rain date 5/19)</p>"",
    "2026-05-14T04:00:00.000Z -> 2026-05-15T04:00:00.000Z [all-day] (America/New_York) "Ascension" desc="Ascension"",
    "2026-05-16T04:00:00.000Z -> 2026-05-17T04:00:00.000Z [all-day] (America/New_York) "Armed Forces Day" desc="Armed Forces Day"",
    "2026-05-19T04:00:00.000Z -> 2026-05-20T04:00:00.000Z [all-day] (America/New_York) "Hugh B. Nolan Middle School Track Meet" desc="<p>Hugh B. Nolan Middle School Track Meet</p>\\n<p>*Rescheduled due to inclement weather from May 13.</p>"",
    "2026-05-21T04:00:00.000Z -> 2026-05-22T04:00:00.000Z [all-day] (America/New_York) "Shavout begins (at sunset)" desc="Shavout begins (at sunset)"",
    "2026-05-23T04:00:00.000Z -> 2026-05-24T04:00:00.000Z [all-day] (America/New_York) "Shavout ends (at sunset)" desc="Shavout ends (at sunset)"",
    "2026-05-24T04:00:00.000Z -> 2026-05-25T04:00:00.000Z [all-day] (America/New_York) "Pentecost" desc="Pentecost"",
    "2026-05-25T04:00:00.000Z -> 2026-05-26T04:00:00.000Z [all-day] (America/New_York) "Memorial Day" desc="Memorial Day"",
    "2026-05-25T04:00:00.000Z -> 2026-05-26T04:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2026-05-26T04:00:00.000Z -> 2026-05-27T04:00:00.000Z [all-day] (America/New_York) "Eid al-Adha begins (at sunset)" desc="Eid al-Adha begins (at sunset)"",
    "2026-05-27T04:00:00.000Z -> 2026-05-28T04:00:00.000Z [all-day] (America/New_York) "Eid al-Adha" desc="Eid al-Adha"",
    "2026-05-27T04:00:00.000Z -> 2026-05-28T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2026-06-01T04:00:00.000Z -> 2026-06-02T04:00:00.000Z [all-day] (America/New_York) "Public textbook display" desc="Public textbook display"",
    "2026-06-05T04:00:00.000Z -> 2026-06-06T04:00:00.000Z [all-day] (America/New_York) "World Environment Day" desc="World Environment Day"",
    "2026-06-10T04:00:00.000Z -> 2026-06-11T04:00:00.000Z [all-day] (America/New_York) "Snow makeup-day" desc="Snow makeup-day"",
    "2026-06-11T04:00:00.000Z -> 2026-06-12T04:00:00.000Z [all-day] (America/New_York) "Snow makeup-day" desc="Snow makeup-day"",
    "2026-06-12T04:00:00.000Z -> 2026-06-13T04:00:00.000Z [all-day] (America/New_York) "Snow makeup-day" desc="Snow makeup-day"",
    "2026-06-14T04:00:00.000Z -> 2026-06-15T04:00:00.000Z [all-day] (America/New_York) "Flag Day" desc="Flag Day"",
    "2026-06-15T04:00:00.000Z -> 2026-06-16T04:00:00.000Z [all-day] (America/New_York) "Snow makeup-day" desc="Snow makeup-day"",
    "2026-06-16T04:00:00.000Z -> 2026-06-17T04:00:00.000Z [all-day] (America/New_York) "2 Hour early dismissal" desc="2 Hour early dismissal"",
    "2026-06-16T04:00:00.000Z -> 2026-06-17T04:00:00.000Z [all-day] (America/New_York) "Last day of school for students*" desc="Last day of school for students*"",
    "2026-06-16T04:00:00.000Z -> 2026-06-17T04:00:00.000Z [all-day] (America/New_York) "Snow makeup-day" desc="Snow makeup-day"",
    "2026-06-17T04:00:00.000Z -> 2026-06-18T04:00:00.000Z [all-day] (America/New_York) "Last day for teachers*" desc="Last day for teachers*"",
    "2026-06-18T04:00:00.000Z -> 2026-06-19T04:00:00.000Z [all-day] (America/New_York) "MS/HS Report cards mailed*" desc="MS/HS Report cards mailed*"",
    "2026-06-19T04:00:00.000Z -> 2026-06-20T04:00:00.000Z [all-day] (America/New_York) "Juneteenth" desc="<p>Juneteenth</p>\\n<p>Offices closed</p>"",
    "2026-06-21T04:00:00.000Z -> 2026-06-22T04:00:00.000Z [all-day] (America/New_York) "Father's Day" desc="Father's Day"",
    "2026-06-21T04:00:00.000Z -> 2026-06-22T04:00:00.000Z [all-day] (America/New_York) "Summer begins" desc="Summer begins"",
    "2026-07-03T04:00:00.000Z -> 2026-07-04T04:00:00.000Z [all-day] (America/New_York) "Offices closed" desc="Offices closed"",
    "2026-07-04T04:00:00.000Z -> 2026-07-05T04:00:00.000Z [all-day] (America/New_York) "Independence Day" desc="Independence Day"",
    "2026-08-12T04:00:00.000Z -> 2026-08-13T04:00:00.000Z [all-day] (America/New_York) "First day of fall sports" desc="First day of fall sports"",
    "2026-08-13T04:00:00.000Z -> 2026-08-14T04:00:00.000Z [all-day] (America/New_York) "First day for teachers" desc="First day for teachers"",
    "2026-08-14T04:00:00.000Z -> 2026-08-15T04:00:00.000Z [all-day] (America/New_York) "Teacher preparation and training" desc="Teacher preparation and training"",
    "2026-08-17T04:00:00.000Z -> 2026-08-18T04:00:00.000Z [all-day] (America/New_York) "Public Textbook Display, Aug 17-24" desc="Public Textbook Display, Aug 17-24"",
    "2026-08-17T04:00:00.000Z -> 2026-08-18T04:00:00.000Z [all-day] (America/New_York) "Teacher preparation and training" desc="Teacher preparation and training"",
    "2026-08-18T04:00:00.000Z -> 2026-08-19T04:00:00.000Z [all-day] (America/New_York) "Teacher preparation and training" desc="Teacher preparation and training"",
    "2026-08-19T04:00:00.000Z -> 2026-08-20T04:00:00.000Z [all-day] (America/New_York) "First day of school" desc="First day of school"",
    "2026-08-31T04:00:00.000Z -> 2026-09-01T04:00:00.000Z [all-day] (America/New_York) "PTA Council Membership Meeting" desc="PTA Council of Frederick County Membership Meeting"",
    "2026-09-07T04:00:00.000Z -> 2026-09-08T04:00:00.000Z [all-day] (America/New_York) "Labor Day" desc="Labor Day"",
    "2026-09-07T04:00:00.000Z -> 2026-09-08T04:00:00.000Z [all-day] (America/New_York) "Schools and Offices Closed" desc="Schools and Offices Closed"",
    "2026-09-08T04:00:00.000Z -> 2026-09-09T04:00:00.000Z [all-day] (America/New_York) "International Literacy Day" desc="International Literacy Day"",
    "2026-09-11T04:00:00.000Z -> 2026-09-12T04:00:00.000Z [all-day] (America/New_York) "Patriot Day" desc="Patriot Day"",
    "2026-09-11T13:49:00.000Z -> 2026-09-11T14:49:00.000Z [timed] (UTC) "Rosh Hoshanah begins at sunset" desc="Rosh Hoshanah begins at sunset"",
    "2026-09-11T15:22:00.000Z -> 2026-09-11T16:22:00.000Z [timed] (UTC) "Public Textbook Display, Sept 11-18" desc="Public Textbook Display, Sept 11-18"",
    "2026-09-12T04:00:00.000Z -> 2026-09-13T04:00:00.000Z [all-day] (America/New_York) "Rosh Hashanah" desc="Rosh Hashanah"",
    "2026-09-13T04:00:00.000Z -> 2026-09-14T04:00:00.000Z [all-day] (America/New_York) "National Grandparents Day" desc="National Grandparents Day"",
    "2026-09-13T04:00:00.000Z -> 2026-09-14T04:00:00.000Z [all-day] (America/New_York) "Rosh Hashanah ends at sunset" desc="Rosh Hashanah ends at sunset"",
    "2026-09-17T04:00:00.000Z -> 2026-09-18T04:00:00.000Z [all-day] (America/New_York) "Citizenship/Constitution Day" desc="Citizenship/Constitution Day"",
    "2026-09-18T04:00:00.000Z -> 2026-09-19T04:00:00.000Z [all-day] (America/New_York) "2-hour early dismissal" desc="2-hour early dismissal"",
    "2026-09-18T04:00:00.000Z -> 2026-09-19T04:00:00.000Z [all-day] (America/New_York) "Mid-Term" desc="Mid-Term"",
    "2026-09-20T04:00:00.000Z -> 2026-09-21T04:00:00.000Z [all-day] (America/New_York) "Yom Kippur begins at sunset" desc="Yom Kippur begins at sunset"",
    "2026-09-21T04:00:00.000Z -> 2026-09-22T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2026-09-21T04:00:00.000Z -> 2026-09-22T04:00:00.000Z [all-day] (America/New_York) "Yom Kippur" desc="Yom Kippur"",
    "2026-09-22T04:00:00.000Z -> 2026-09-23T04:00:00.000Z [all-day] (America/New_York) "ES Pappy Lorenzen Cross Country Event" desc="<p>ES Pappy Lorenzen Cross Country Event</p>\\n<p>Rain date 9/29 or 9/30</p>"",
    "2026-09-22T04:00:00.000Z -> 2026-09-23T04:00:00.000Z [all-day] (America/New_York) "FCPS Golf Tournament at Clustered Spires" desc="FCPS Golf Tournament at Clustered Spires"",
    "2026-09-22T04:00:00.000Z -> 2026-09-23T04:00:00.000Z [all-day] (America/New_York) "Yom Kippur ends at sunset" desc="Yom Kippur ends at sunset"",
    "2026-09-23T04:00:00.000Z -> 2026-09-24T04:00:00.000Z [all-day] (America/New_York) "Autumn begins" desc="<p>Autumn begins</p>"",
    "2026-09-23T04:00:00.000Z -> 2026-09-24T04:00:00.000Z [all-day] (America/New_York) "Greenhand Ceremony at GFF" desc="Greenhand Ceremony at GFF"",
    "2026-09-23T04:00:00.000Z -> 2026-09-24T04:00:00.000Z [all-day] (America/New_York) "MS Pappy Lorenzen Cross Country Event" desc="<p>MS Pappy Lorenzen Cross Country Event</p>\\n<p>Rain date 9/29 or 9/30</p>"",
    "2026-09-25T04:00:00.000Z -> 2026-09-26T04:00:00.000Z [all-day] (America/New_York) "3.5 hour early dismissal" desc="3.5 hour early dismissal"",
    "2026-09-25T04:00:00.000Z -> 2026-09-26T04:00:00.000Z [all-day] (America/New_York) "Fair Day" desc="<p>Fair Day</p>"",
    "2026-10-05T04:00:00.000Z -> 2026-10-06T04:00:00.000Z [all-day] (America/New_York) "Child Health Day" desc="Child Health Day"",
    "2026-10-05T04:00:00.000Z -> 2026-10-06T04:00:00.000Z [all-day] (America/New_York) "Interim reports issued" desc="Interim reports issued"",
    "2026-10-05T04:00:00.000Z -> 2026-10-06T04:00:00.000Z [all-day] (America/New_York) "World Day of Bullying Prevention" desc="World Day of Bullying Prevention"",
    "2026-10-07T04:00:00.000Z -> 2026-10-08T04:00:00.000Z [all-day] (America/New_York) "International Walk and Roll to School Day" desc="International Walk and Roll to School Day"",
    "2026-10-08T04:00:00.000Z -> 2026-10-09T04:00:00.000Z [all-day] (America/New_York) "Ombuds Day" desc="Ombuds Day"",
    "2026-10-12T04:00:00.000Z -> 2026-10-13T04:00:00.000Z [all-day] (America/New_York) "Columbus Day" desc="Columbus Day"",
    "2026-10-12T04:00:00.000Z -> 2026-10-13T04:00:00.000Z [all-day] (America/New_York) "FCPS Marching Band Festival" desc="<p>FCPS Marching Band Festival</p>\\n<p>Rain&nbsp; date 10/19</p>"",
    "2026-10-12T04:00:00.000Z -> 2026-10-13T04:00:00.000Z [all-day] (America/New_York) "Indigenous Peoples's Day" desc="Indigenous Peoples's Day"",
    "2026-10-12T15:39:00.000Z -> 2026-10-12T16:39:00.000Z [timed] (UTC) "Public Textbook Display Oct 12-19" desc="Public Textbook Display Oct 12-19"",
    "2026-10-16T04:00:00.000Z -> 2026-10-17T04:00:00.000Z [all-day] (America/New_York) "ESSL Fall Spooktacular" desc="ESSL Fall Spooktacular"",
    "2026-10-16T04:00:00.000Z -> 2026-10-17T04:00:00.000Z [all-day] (America/New_York) "Professional Learning Day" desc="Professional Learning Day<br>"",
    "2026-10-16T04:00:00.000Z -> 2026-10-17T04:00:00.000Z [all-day] (America/New_York) "Schools Closed" desc="Schools Closed"",
    "2026-10-16T04:00:00.000Z -> 2026-10-17T04:00:00.000Z [all-day] (America/New_York) "State Local PL Conferences" desc="State Local PL Conferences"",
    "2026-10-20T04:00:00.000Z -> 2026-10-21T04:00:00.000Z [all-day] (America/New_York) "FCPS Girls Flag Football Championship" @ "UHS" desc="FCPS Girls Flag Football Championship"",
    "2026-10-20T04:00:00.000Z -> 2026-10-21T04:00:00.000Z [all-day] (America/New_York) "FCPS Unified Tennis Tournament" @ "Baker Park" desc="<p>FCPS Unified Tennis Tournament</p>\\n<p>Rain date 10/21</p>"",
    "2026-10-22T04:00:00.000Z -> 2026-10-23T04:00:00.000Z [all-day] (America/New_York) "CTC Open House" desc="CTC Open House"",
    "2026-10-23T04:00:00.000Z -> 2026-10-24T04:00:00.000Z [all-day] (America/New_York) "Term 1 ends" desc="Term 1 ends"",
    "2026-10-24T04:00:00.000Z -> 2026-10-25T04:00:00.000Z [all-day] (America/New_York) "Make a Difference Day" desc="Make a Difference Day"",
    "2026-10-26T04:00:00.000Z -> 2026-10-27T04:00:00.000Z [all-day] (America/New_York) "FCPS Fall Cheerleading Competition" @ "GTJHS" desc="FCPS Fall Cheerleading Competition"",
    "2026-10-26T04:00:00.000Z -> 2026-10-27T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2026-10-26T04:00:00.000Z -> 2026-10-27T04:00:00.000Z [all-day] (America/New_York) "Teacher Work Day" desc="Teacher Work Day"",
    "2026-10-27T04:00:00.000Z -> 2026-10-28T04:00:00.000Z [all-day] (America/New_York) "Term 2 begins" desc="Term 2 begins"",
    "2026-10-28T04:00:00.000Z -> 2026-10-29T04:00:00.000Z [all-day] (America/New_York) "4-hour late arrival" desc="4-hour late arrival"",
    "2026-10-28T04:00:00.000Z -> 2026-10-29T04:00:00.000Z [all-day] (America/New_York) "ES & MS Teacher Conferences" desc="ES &amp; MS Teacher Conferences"",
    "2026-10-28T04:00:00.000Z -> 2026-10-29T04:00:00.000Z [all-day] (America/New_York) "Full day for HS" desc="Full day for HS"",
    "2026-10-29T04:00:00.000Z -> 2026-10-30T04:00:00.000Z [all-day] (America/New_York) "4-hour late arrival" desc="4-hour late arrival"",
    "2026-10-29T04:00:00.000Z -> 2026-10-30T04:00:00.000Z [all-day] (America/New_York) "ES & MS Teacher Conferences" desc="ES &amp; MS Teacher Conferences"",
    "2026-10-29T04:00:00.000Z -> 2026-10-30T04:00:00.000Z [all-day] (America/New_York) "FCPS Cross Country Meet" @ "Woodsboro Park" desc="FCPS Cross Country Meet"",
    "2026-10-29T04:00:00.000Z -> 2026-10-30T04:00:00.000Z [all-day] (America/New_York) "Full day for HS" desc="Full day for HS"",
    "2026-10-30T04:00:00.000Z -> 2026-10-31T04:00:00.000Z [all-day] (America/New_York) "3.5-hour early dismissal" desc="3.5-hour early dismissal"",
    "2026-10-30T04:00:00.000Z -> 2026-10-31T04:00:00.000Z [all-day] (America/New_York) "ES & MS Teacher Conferences" desc="ES &amp; MS Teacher Conferences"",
    "2026-10-31T04:00:00.000Z -> 2026-11-01T04:00:00.000Z [all-day] (America/New_York) "Halloween" desc="Halloween"",
    "2026-11-01T04:00:00.000Z -> 2026-11-02T05:00:00.000Z [all-day] (America/New_York) "All Saints Day" desc="All Saints Day"",
    "2026-11-02T05:00:00.000Z -> 2026-11-03T05:00:00.000Z [all-day] (America/New_York) "Public Textbook Display Nov 2-10" desc="Public Textbook Display Nov 2-10"",
    "2026-11-03T05:00:00.000Z -> 2026-11-04T05:00:00.000Z [all-day] (America/New_York) "Election Day" desc="Election Day"",
    "2026-11-03T05:00:00.000Z -> 2026-11-04T05:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2026-11-07T05:00:00.000Z -> 2026-11-08T05:00:00.000Z [all-day] (America/New_York) "Diwali begins" desc="Diwali begins"",
    "2026-11-08T05:00:00.000Z -> 2026-11-09T05:00:00.000Z [all-day] (America/New_York) "Diwali ends" desc="Diwali ends"",
    "2026-11-11T05:00:00.000Z -> 2026-11-12T05:00:00.000Z [all-day] (America/New_York) "Veterans Day" desc="Veterans Day"",
    "2026-11-13T05:00:00.000Z -> 2026-11-14T05:00:00.000Z [all-day] (America/New_York) "Report cards issued" desc="Report cards issued"",
    "2026-11-13T05:00:00.000Z -> 2026-11-14T05:00:00.000Z [all-day] (America/New_York) "World Kindness Day" desc="World Kindness Day"",
    "2026-11-14T05:00:00.000Z -> 2026-11-15T05:00:00.000Z [all-day] (America/New_York) "First day of winter sports" desc="First day of winter sports"",
    "2026-11-16T05:00:00.000Z -> 2026-11-17T05:00:00.000Z [all-day] (America/New_York) "PTA Council of Frederick County Membership Meeting" desc="PTA Council of Frederick County Membership Meeting"",
    "2026-11-17T05:00:00.000Z -> 2026-11-18T05:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium shows" desc="ESSL Planetarium shows"",
    "2026-11-18T05:00:00.000Z -> 2026-11-19T05:00:00.000Z [all-day] (America/New_York) "Education Support Professionals Day" desc="Education Support Professionals Day"",
    "2026-11-19T05:00:00.000Z -> 2026-11-20T05:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium shows" desc="ESSL Planetarium shows"",
    "2026-11-19T05:00:00.000Z -> 2026-11-20T05:00:00.000Z [all-day] (America/New_York) "National Parental Involvement Day" desc="National Parental Involvement Day"",
    "2026-11-20T05:00:00.000Z -> 2026-11-21T05:00:00.000Z [all-day] (America/New_York) "Substitute Educators Day" desc="Substitute Educators Day"",
    "2026-11-24T05:00:00.000Z -> 2026-11-25T05:00:00.000Z [all-day] (America/New_York) "2-hour early dismissal" desc="2-hour early dismissal"",
    "2026-11-25T05:00:00.000Z -> 2026-11-26T05:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2026-11-25T05:00:00.000Z -> 2026-11-26T05:00:00.000Z [all-day] (America/New_York) "Thanksgiving Break" desc="Thanksgiving Break"",
    "2026-11-26T05:00:00.000Z -> 2026-11-27T05:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2026-11-26T05:00:00.000Z -> 2026-11-27T05:00:00.000Z [all-day] (America/New_York) "Thanksgiving Day" desc="Thanksgiving Day"",
    "2026-11-27T05:00:00.000Z -> 2026-11-28T05:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2026-11-27T05:00:00.000Z -> 2026-11-28T05:00:00.000Z [all-day] (America/New_York) "Thanksgiving Break" desc="Thanksgiving Break"",
    "2026-12-03T05:00:00.000Z -> 2026-12-04T05:00:00.000Z [all-day] (America/New_York) "2-hour early dismissal" desc="2-hour early dismissal"",
    "2026-12-03T05:00:00.000Z -> 2026-12-04T05:00:00.000Z [all-day] (America/New_York) "Mid Term" desc="Mid Term"",
    "2026-12-04T05:00:00.000Z -> 2026-12-05T05:00:00.000Z [all-day] (America/New_York) "Hanukkah begins at sunset" desc="Hanukkah begins at sunset"",
    "2026-12-07T05:00:00.000Z -> 2026-12-08T05:00:00.000Z [all-day] (America/New_York) "Pearl Harbor Day" desc="Pearl Harbor Day"",
    "2026-12-08T05:00:00.000Z -> 2026-12-09T05:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium Shows" desc="ESSL Planetarium Shows"",
    "2026-12-10T05:00:00.000Z -> 2026-12-11T05:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium Shows" desc="ESSL Planetarium Shows"",
    "2026-12-10T05:00:00.000Z -> 2026-12-11T05:00:00.000Z [all-day] (America/New_York) "Human Rights Day" desc="Human Rights Day"",
    "2026-12-11T05:00:00.000Z -> 2026-12-12T05:00:00.000Z [all-day] (America/New_York) "Public Textbook Display Dec 11-18" desc="Public Textbook Display Dec 11-18"",
    "2026-12-12T05:00:00.000Z -> 2026-12-13T05:00:00.000Z [all-day] (America/New_York) "Hanukkah ends at sunset" desc="Hanukkah ends at sunset"",
    "2026-12-15T05:00:00.000Z -> 2026-12-16T05:00:00.000Z [all-day] (America/New_York) "Bill of Rights Day" desc="Bill of Rights Day"",
    "2026-12-15T05:00:00.000Z -> 2026-12-16T05:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium Shows" desc="ESSL Planetarium Shows"",
    "2026-12-17T05:00:00.000Z -> 2026-12-18T05:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium Shows" desc="ESSL Planetarium Shows"",
    "2026-12-17T05:00:00.000Z -> 2026-12-18T05:00:00.000Z [all-day] (America/New_York) "Youth Apprentice Summit" @ "FCC" desc="Youth Apprentice Summit"",
    "2026-12-21T05:00:00.000Z -> 2026-12-22T05:00:00.000Z [all-day] (America/New_York) "Winter begins" desc="Winter begins"",
    "2026-12-23T05:00:00.000Z -> 2026-12-24T05:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2026-12-23T05:00:00.000Z -> 2026-12-24T05:00:00.000Z [all-day] (America/New_York) "Winter break" desc="Winter break"",
    "2026-12-24T05:00:00.000Z -> 2026-12-25T05:00:00.000Z [all-day] (America/New_York) "Christmas Eve" desc="Christmas Eve"",
    "2026-12-24T05:00:00.000Z -> 2026-12-25T05:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2026-12-25T05:00:00.000Z -> 2026-12-26T05:00:00.000Z [all-day] (America/New_York) "Christmas Eve" desc="Christmas Eve"",
    "2026-12-25T05:00:00.000Z -> 2026-12-26T05:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2026-12-26T05:00:00.000Z -> 2026-12-27T05:00:00.000Z [all-day] (America/New_York) "Kwanzaa begins" desc="Kwanzaa begins"",
    "2026-12-28T05:00:00.000Z -> 2026-12-29T05:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2026-12-28T05:00:00.000Z -> 2026-12-29T05:00:00.000Z [all-day] (America/New_York) "Winter break" desc="Winter break"",
    "2026-12-29T05:00:00.000Z -> 2026-12-30T05:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2026-12-29T05:00:00.000Z -> 2026-12-30T05:00:00.000Z [all-day] (America/New_York) "Winter break" desc="Winter break"",
    "2026-12-30T05:00:00.000Z -> 2026-12-31T05:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2026-12-30T05:00:00.000Z -> 2026-12-31T05:00:00.000Z [all-day] (America/New_York) "Winter Break" desc="Winter Break"",
    "2026-12-31T05:00:00.000Z -> 2027-01-01T05:00:00.000Z [all-day] (America/New_York) "New Year's Eve" desc="New Year's Eve"",
    "2026-12-31T05:00:00.000Z -> 2027-01-01T05:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2027-01-01T05:00:00.000Z -> 2027-01-02T05:00:00.000Z [all-day] (America/New_York) "Kwanzaa ends" desc="Kwanzaa ends"",
    "2027-01-01T05:00:00.000Z -> 2027-01-02T05:00:00.000Z [all-day] (America/New_York) "New Year's Day" desc="New Year's Day"",
    "2027-01-01T05:00:00.000Z -> 2027-01-02T05:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2027-01-05T05:00:00.000Z -> 2027-01-06T05:00:00.000Z [all-day] (America/New_York) "SMOB Candidate Forum" desc="<p>SMOB Candidate Forum</p>\\n<p>Snow date 1/7</p>"",
    "2027-01-06T05:00:00.000Z -> 2027-01-07T05:00:00.000Z [all-day] (America/New_York) "Epiphany" desc="Epiphany"",
    "2027-01-08T05:00:00.000Z -> 2027-01-09T05:00:00.000Z [all-day] (America/New_York) "Frederick County Academic Tournament session" @ "FHS" desc="Frederick County Academic Tournament session"",
    "2027-01-14T05:00:00.000Z -> 2027-01-15T05:00:00.000Z [all-day] (America/New_York) "MLK Celebration" desc="<p>MLK Celebration</p>\\n<p>Snow date 1/28</p>"",
    "2027-01-14T05:00:00.000Z -> 2027-01-15T05:00:00.000Z [all-day] (America/New_York) "Public Textbook Display Jan 14-22" desc="Public Textbook Display Jan 14-22"",
    "2027-01-15T05:00:00.000Z -> 2027-01-16T05:00:00.000Z [all-day] (America/New_York) "Frederick County Academic Tournament session" @ "FHS" desc="Frederick County Academic Tournament session"",
    "2027-01-15T05:00:00.000Z -> 2027-01-16T05:00:00.000Z [all-day] (America/New_York) "Term 2 ends" desc="Term 2 ends"",
    "2027-01-16T05:00:00.000Z -> 2027-01-17T05:00:00.000Z [all-day] (America/New_York) "Frederick Math Counts Open" desc="<p>Frederick Math Counts Open</p>\\n<p>Snow date 1/23</p>"",
    "2027-01-17T05:00:00.000Z -> 2027-01-18T05:00:00.000Z [all-day] (America/New_York) "World Religion Day" desc="World Religion Day"",
    "2027-01-18T05:00:00.000Z -> 2027-01-19T05:00:00.000Z [all-day] (America/New_York) "Martin Luther King, Jr. Day" desc="Martin Luther King, Jr. Day"",
    "2027-01-18T05:00:00.000Z -> 2027-01-19T05:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2027-01-19T05:00:00.000Z -> 2027-01-20T05:00:00.000Z [all-day] (America/New_York) "ESSL Winterfest" desc="ESSL Winterfest"",
    "2027-01-19T05:00:00.000Z -> 2027-01-20T05:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2027-01-19T05:00:00.000Z -> 2027-01-20T05:00:00.000Z [all-day] (America/New_York) "Teacher work day" desc="Teacher work day"",
    "2027-01-20T05:00:00.000Z -> 2027-01-21T05:00:00.000Z [all-day] (America/New_York) "Term 3 begins" desc="Term 3 begins"",
    "2027-01-22T05:00:00.000Z -> 2027-01-23T05:00:00.000Z [all-day] (America/New_York) "Frederick County Academic Tournament session" @ "FHS" desc="Frederick County Academic Tournament session"",
    "2027-01-23T05:00:00.000Z -> 2027-01-24T05:00:00.000Z [all-day] (America/New_York) "FCPS Indoor Track Meet" @ "Hagerstown CC" desc="FCPS Indoor Track Meet"",
    "2027-01-26T05:00:00.000Z -> 2027-01-27T05:00:00.000Z [all-day] (America/New_York) "FCPS Unified Bocce Tournament" @ "THS" desc="FCPS Unified Bocce Tournament"",
    "2027-01-27T05:00:00.000Z -> 2027-01-28T05:00:00.000Z [all-day] (America/New_York) "FCPS Winter Cheerleading Competition" @ "LHS" desc="FCPS Winter Cheerleading Competition"",
    "2027-01-29T05:00:00.000Z -> 2027-01-30T05:00:00.000Z [all-day] (America/New_York) "Frederick County Academic Tournament session" @ "FHS" desc="Frederick County Academic Tournament session"",
    "2027-01-30T05:00:00.000Z -> 2027-01-31T05:00:00.000Z [all-day] (America/New_York) "FCPS All-County High Music Festival" desc="<p>FCPS All-County High Music Festival</p>\\n<p>Snow date 2/1</p>"",
    "2027-02-01T05:00:00.000Z -> 2027-02-02T05:00:00.000Z [all-day] (America/New_York) "National Freedom Day" desc="National Freedom Day"",
    "2027-02-02T05:00:00.000Z -> 2027-02-03T05:00:00.000Z [all-day] (America/New_York) "Groundhog Day" desc="Groundhog Day"",
    "2027-02-02T05:00:00.000Z -> 2027-02-03T05:00:00.000Z [all-day] (America/New_York) "Report cards issued" desc="Report cards issued"",
    "2027-02-04T05:00:00.000Z -> 2027-02-05T05:00:00.000Z [all-day] (America/New_York) "FCPS Diving Meet" @ "WHS" desc="FCPS Diving Meet"",
    "2027-02-05T05:00:00.000Z -> 2027-02-06T05:00:00.000Z [all-day] (America/New_York) "Frederick County Academic Tournament session" @ "FHS" desc="Frederick County Academic Tournament session"",
    "2027-02-06T05:00:00.000Z -> 2027-02-07T05:00:00.000Z [all-day] (America/New_York) "FCPS Swim Meet" @ "WHS" desc="FCPS Swim Meet"",
    "2027-02-06T05:00:00.000Z -> 2027-02-07T05:00:00.000Z [all-day] (America/New_York) "Lunar New Year" desc="Lunar New Year"",
    "2027-02-07T05:00:00.000Z -> 2027-02-08T05:00:00.000Z [all-day] (America/New_York) "Ramadan begins at sunset" desc="Ramadan begins at sunset"",
    "2027-02-08T05:00:00.000Z -> 2027-02-09T05:00:00.000Z [all-day] (America/New_York) "Ramadan" desc="Ramadan"",
    "2027-02-09T05:00:00.000Z -> 2027-02-10T05:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium Shows" desc="ESSL Planetarium Shows"",
    "2027-02-09T05:00:00.000Z -> 2027-02-10T05:00:00.000Z [all-day] (America/New_York) "Mardi Gras" desc="Mardi Gras"",
    "2027-02-10T05:00:00.000Z -> 2027-02-11T05:00:00.000Z [all-day] (America/New_York) "Ash Wednesday" desc="Ash Wednesday"",
    "2027-02-11T05:00:00.000Z -> 2027-02-12T05:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium Shows" desc="ESSL Planetarium Shows"",
    "2027-02-11T05:00:00.000Z -> 2027-02-12T05:00:00.000Z [all-day] (America/New_York) "Public Textbook Display Feb 11-19" desc="Public Textbook Display Feb 11-19"",
    "2027-02-12T05:00:00.000Z -> 2027-02-13T05:00:00.000Z [all-day] (America/New_York) "Frederick County Academic Tournament session" @ "FHS" desc="Frederick County Academic Tournament session"",
    "2027-02-12T05:00:00.000Z -> 2027-02-13T05:00:00.000Z [all-day] (America/New_York) "Lincoln's Birthday" desc="Lincoln's Birthday"",
    "2027-02-13T05:00:00.000Z -> 2027-02-14T05:00:00.000Z [all-day] (America/New_York) "FCPS All-County Middle Music Festival" desc="<p>FCPS All-County Middle Music Festival</p>\\n<p>Snow date 2/16</p>"",
    "2027-02-13T05:00:00.000Z -> 2027-02-14T05:00:00.000Z [all-day] (America/New_York) "Regional Math Counts Competition" desc="<p>Regional Math Counts Competition</p>\\n<p>Snow date 2/20</p>"",
    "2027-02-14T05:00:00.000Z -> 2027-02-15T05:00:00.000Z [all-day] (America/New_York) "Frederick Douglass Day" desc="Frederick Douglass Day"",
    "2027-02-14T05:00:00.000Z -> 2027-02-15T05:00:00.000Z [all-day] (America/New_York) "Saint Valentine's Day" desc="Saint Valentine's Day"",
    "2027-02-15T05:00:00.000Z -> 2027-02-16T05:00:00.000Z [all-day] (America/New_York) "Presidents' Day" desc="Presidents' Day"",
    "2027-02-15T05:00:00.000Z -> 2027-02-16T05:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2027-02-15T05:00:00.000Z -> 2027-02-16T05:00:00.000Z [all-day] (America/New_York) "Washington's Birthday" desc="Washington's Birthday"",
    "2027-02-19T05:00:00.000Z -> 2027-02-20T05:00:00.000Z [all-day] (America/New_York) "2-hour early dismissal" desc="2-hour early dismissal"",
    "2027-02-19T05:00:00.000Z -> 2027-02-20T05:00:00.000Z [all-day] (America/New_York) "FCPS Wrestling Tournament" @ "OHS" desc="FCPS Wrestling Tournament"",
    "2027-02-19T05:00:00.000Z -> 2027-02-20T05:00:00.000Z [all-day] (America/New_York) "Frederick County Academic Tournament session" @ "FHS" desc="Frederick County Academic Tournament session"",
    "2027-02-19T05:00:00.000Z -> 2027-02-20T05:00:00.000Z [all-day] (America/New_York) "Mid-term" desc="Mid-term"",
    "2027-02-20T05:00:00.000Z -> 2027-02-21T05:00:00.000Z [all-day] (America/New_York) "FCPS Wrestling Tournament" @ "OHS" desc="FCPS Wrestling Tournament"",
    "2027-02-22T05:00:00.000Z -> 2027-02-23T05:00:00.000Z [all-day] (America/New_York) "PTA Council of Frederick County Membership Meeting" desc="PTA Council of Frederick County Membership Meeting"",
    "2027-02-26T05:00:00.000Z -> 2027-02-27T05:00:00.000Z [all-day] (America/New_York) "FCPS All-County High Jazz Festival" desc="FCPS All-County High Jazz Festival"",
    "2027-02-26T05:00:00.000Z -> 2027-02-27T05:00:00.000Z [all-day] (America/New_York) "Frederick County Academic Tournament Championship" @ "FHS" desc="<p>Frederick County Academic Tournament Championship</p>\\n<p>Snow date 3/1</p>"",
    "2027-03-01T05:00:00.000Z -> 2027-03-02T05:00:00.000Z [all-day] (America/New_York) "First day of spring sports" desc="First day of spring sports"",
    "2027-03-04T05:00:00.000Z -> 2027-03-05T05:00:00.000Z [all-day] (America/New_York) "Interim reports issued" desc="Interim reports issued"",
    "2027-03-06T05:00:00.000Z -> 2027-03-07T05:00:00.000Z [all-day] (America/New_York) "Youth Art Month exhibit opening" @ "Delaplaine Arts Center" desc="Youth Art Month exhibit opening"",
    "2027-03-06T18:05:00.000Z -> 2027-03-06T19:05:00.000Z [timed] (UTC) "FCPS Elementary Social Studies Fair" @ "GTJMS" desc="<p>FCPS Elementary Social Studies Fair</p>\\n<p>Snow date 3/13</p>"",
    "2027-03-08T05:00:00.000Z -> 2027-03-09T05:00:00.000Z [all-day] (America/New_York) "International Women's Day" desc="International Women's Day"",
    "2027-03-08T05:00:00.000Z -> 2027-03-09T05:00:00.000Z [all-day] (America/New_York) "Ramadan ends at sunset" desc="Ramadan ends at sunset"",
    "2027-03-09T05:00:00.000Z -> 2027-03-10T05:00:00.000Z [all-day] (America/New_York) "Eid al-Fitr begins at sunset" desc="Eid al-Fitr begins at sunset"",
    "2027-03-10T05:00:00.000Z -> 2027-03-11T05:00:00.000Z [all-day] (America/New_York) "Eid al-Fitr" desc="Eid al-Fitr&nbsp;"",
    "2027-03-14T05:00:00.000Z -> 2027-03-15T04:00:00.000Z [all-day] (America/New_York) "Pi Day" desc="Pi Day"",
    "2027-03-15T04:00:00.000Z -> 2027-03-16T04:00:00.000Z [all-day] (America/New_York) "Public Textbook Display March 15-22" desc="Public Textbook Display March 15-22"",
    "2027-03-16T04:00:00.000Z -> 2027-03-17T04:00:00.000Z [all-day] (America/New_York) "Career and Tech Fair" @ "FHS" desc="<p>Career and Tech Fair</p>\\n<p>Snow date 3/18</p>"",
    "2027-03-17T04:00:00.000Z -> 2027-03-18T04:00:00.000Z [all-day] (America/New_York) "Saint Patrick's Day" desc="Saint Patrick's Day"",
    "2027-03-20T04:00:00.000Z -> 2027-03-21T04:00:00.000Z [all-day] (America/New_York) "FCPS Secondary Science & Engineering Fair" @ "THS" desc="FCPS Secondary Science &amp; Engineering Fair"",
    "2027-03-20T04:00:00.000Z -> 2027-03-21T04:00:00.000Z [all-day] (America/New_York) "Nawruz" desc="Nawruz"",
    "2027-03-20T04:00:00.000Z -> 2027-03-21T04:00:00.000Z [all-day] (America/New_York) "Spring begins" desc="Spring begins"",
    "2027-03-21T04:00:00.000Z -> 2027-03-22T04:00:00.000Z [all-day] (America/New_York) "Palm Sunday" desc="Palm Sunday"",
    "2027-03-22T04:00:00.000Z -> 2027-03-23T04:00:00.000Z [all-day] (America/New_York) "Holi" desc="Holi"",
    "2027-03-22T04:00:00.000Z -> 2027-03-23T04:00:00.000Z [all-day] (America/New_York) "Purim begins at sunset" desc="Purim begins at sunset"",
    "2027-03-23T04:00:00.000Z -> 2027-03-24T04:00:00.000Z [all-day] (America/New_York) "Purim ends at sunset" desc="Purim ends at sunset"",
    "2027-03-24T04:00:00.000Z -> 2027-03-25T04:00:00.000Z [all-day] (America/New_York) "Frederick Challenge 24 Tournament" @ "WAVES" desc="Frederick Challenge 24 Tournament"",
    "2027-03-24T04:00:00.000Z -> 2027-03-25T04:00:00.000Z [all-day] (America/New_York) "Term 3 ends" desc="Term 3 ends"",
    "2027-03-25T04:00:00.000Z -> 2027-03-26T04:00:00.000Z [all-day] (America/New_York) "ESSL Spring Fling" desc="ESSL Spring Fling"",
    "2027-03-25T04:00:00.000Z -> 2027-03-26T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2027-03-25T04:00:00.000Z -> 2027-03-26T04:00:00.000Z [all-day] (America/New_York) "Teacher work day" desc="Teacher work day"",
    "2027-03-26T04:00:00.000Z -> 2027-03-27T04:00:00.000Z [all-day] (America/New_York) "Good Friday" desc="Good Friday"",
    "2027-03-26T04:00:00.000Z -> 2027-03-27T04:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2027-03-28T04:00:00.000Z -> 2027-03-29T04:00:00.000Z [all-day] (America/New_York) "Easter" desc="Easter"",
    "2027-03-29T04:00:00.000Z -> 2027-03-30T04:00:00.000Z [all-day] (America/New_York) "Easter Monday" desc="Easter Monday"",
    "2027-03-29T04:00:00.000Z -> 2027-03-30T04:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2027-03-30T04:00:00.000Z -> 2027-03-31T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2027-03-30T04:00:00.000Z -> 2027-03-31T04:00:00.000Z [all-day] (America/New_York) "Spring Break" desc="Spring Break"",
    "2027-03-31T04:00:00.000Z -> 2027-04-01T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2027-03-31T04:00:00.000Z -> 2027-04-01T04:00:00.000Z [all-day] (America/New_York) "Spring Break" desc="Spring Break"",
    "2027-04-01T04:00:00.000Z -> 2027-04-02T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2027-04-01T04:00:00.000Z -> 2027-04-02T04:00:00.000Z [all-day] (America/New_York) "Spring Break" desc="Spring Break"",
    "2027-04-02T04:00:00.000Z -> 2027-04-03T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2027-04-02T04:00:00.000Z -> 2027-04-03T04:00:00.000Z [all-day] (America/New_York) "Spring Break" desc="Spring Break"",
    "2027-04-05T04:00:00.000Z -> 2027-04-06T04:00:00.000Z [all-day] (America/New_York) "Term 4 begins" desc="Term 4 begins"",
    "2027-04-07T04:00:00.000Z -> 2027-04-08T04:00:00.000Z [all-day] (America/New_York) "World Health Day" desc="World Health Day"",
    "2027-04-08T04:00:00.000Z -> 2027-04-09T04:00:00.000Z [all-day] (America/New_York) "FCPS All-County High Dance Festival" desc="FCPS All-County High Dance Festival"",
    "2027-04-10T04:00:00.000Z -> 2027-04-11T04:00:00.000Z [all-day] (America/New_York) "FCPS Elementary Science Fair & Elementary STEM Showcase" @ "THS" desc="FCPS Elementary Science Fair &amp; Elementary STEM Showcase"",
    "2027-04-12T04:00:00.000Z -> 2027-04-13T04:00:00.000Z [all-day] (America/New_York) "Public Textbook Display April 12-19" desc="Public Textbook Display April 12-19"",
    "2027-04-13T04:00:00.000Z -> 2027-04-14T04:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium shows" desc="ESSL Planetarium shows"",
    "2027-04-13T04:00:00.000Z -> 2027-04-14T04:00:00.000Z [all-day] (America/New_York) "National Library Worker's Day" desc="National Library Worker's Day"",
    "2027-04-15T04:00:00.000Z -> 2027-04-16T04:00:00.000Z [all-day] (America/New_York) "ESSL Planetarium shows" desc="ESSL Planetarium shows"",
    "2027-04-16T04:00:00.000Z -> 2027-04-17T04:00:00.000Z [all-day] (America/New_York) "Report cards issued" desc="Report cards issued"",
    "2027-04-21T04:00:00.000Z -> 2027-04-22T04:00:00.000Z [all-day] (America/New_York) "Administrative Professionals Day" desc="Administrative Professionals Day"",
    "2027-04-21T04:00:00.000Z -> 2027-04-22T04:00:00.000Z [all-day] (America/New_York) "Passover begins at sunset" desc="Passover begins at sunset"",
    "2027-04-22T04:00:00.000Z -> 2027-04-23T04:00:00.000Z [all-day] (America/New_York) "Earth Day" desc="Earth Day"",
    "2027-04-27T04:00:00.000Z -> 2027-04-28T04:00:00.000Z [all-day] (America/New_York) "FCPS Unified Track & Field Meet" @ "GTJHS" desc="FCPS Unified Track &amp; Field Meet"",
    "2027-04-28T04:00:00.000Z -> 2027-04-29T04:00:00.000Z [all-day] (America/New_York) "Elementary Honors Chorus" @ "Weinberg Center" desc="Elementary Honors Chorus"",
    "2027-04-29T04:00:00.000Z -> 2027-04-30T04:00:00.000Z [all-day] (America/New_York) "Passover ends at sunset" desc="Passover ends at sunset"",
    "2027-04-30T04:00:00.000Z -> 2027-05-01T04:00:00.000Z [all-day] (America/New_York) "Arbor Day" desc="Arbor Day"",
    "2027-05-01T04:00:00.000Z -> 2027-05-02T04:00:00.000Z [all-day] (America/New_York) "Law Day" desc="Law Day"",
    "2027-05-02T04:00:00.000Z -> 2027-05-03T04:00:00.000Z [all-day] (America/New_York) "Orthodox Easter" desc="Orthodox Easter"",
    "2027-05-04T04:00:00.000Z -> 2027-05-05T04:00:00.000Z [all-day] (America/New_York) "ESSL Star Wars Night" desc="ESSL Star Wars Night"",
    "2027-05-04T04:00:00.000Z -> 2027-05-05T04:00:00.000Z [all-day] (America/New_York) "National Teacher Day" desc="National Teacher Day"",
    "2027-05-05T04:00:00.000Z -> 2027-05-06T04:00:00.000Z [all-day] (America/New_York) "Cinco de Mayo" desc="Cinco de Mayo"",
    "2027-05-05T04:00:00.000Z -> 2027-05-06T04:00:00.000Z [all-day] (America/New_York) "National Interpreter Appreciation Day" desc="National Interpreter Appreciation Day"",
    "2027-05-06T04:00:00.000Z -> 2027-05-07T04:00:00.000Z [all-day] (America/New_York) "Ascension" desc="Ascension"",
    "2027-05-06T04:00:00.000Z -> 2027-05-07T04:00:00.000Z [all-day] (America/New_York) "Career Signing Day" @ "FCC" desc="Career Signing Day"",
    "2027-05-06T04:00:00.000Z -> 2027-05-07T04:00:00.000Z [all-day] (America/New_York) "FCPS Outdoor Track & Field Meet" @ "UHS" desc="FCPS Outdoor Track &amp; Field Meet"",
    "2027-05-07T04:00:00.000Z -> 2027-05-08T04:00:00.000Z [all-day] (America/New_York) "2-hour early dismissal" desc="2-hour early dismissal"",
    "2027-05-07T04:00:00.000Z -> 2027-05-08T04:00:00.000Z [all-day] (America/New_York) "Mid-term" desc="Mid-term"",
    "2027-05-07T04:00:00.000Z -> 2027-05-08T04:00:00.000Z [all-day] (America/New_York) "School Lunch Hero Day" desc="School Lunch Hero Day"",
    "2027-05-08T04:00:00.000Z -> 2027-05-09T04:00:00.000Z [all-day] (America/New_York) "World Red Cross Day" desc="World Red Cross Day"",
    "2027-05-09T04:00:00.000Z -> 2027-05-10T04:00:00.000Z [all-day] (America/New_York) "Mother's Day" desc="Mother's Day"",
    "2027-05-12T04:00:00.000Z -> 2027-05-13T04:00:00.000Z [all-day] (America/New_York) "FCPS Tennis Tournament" desc="FCPS Tennis Tournament"",
    "2027-05-12T04:00:00.000Z -> 2027-05-13T04:00:00.000Z [all-day] (America/New_York) "National School Nurse Day" desc="National School Nurse Day"",
    "2027-05-13T04:00:00.000Z -> 2027-05-14T04:00:00.000Z [all-day] (America/New_York) "FCPS Tennis Tournament" @ "Baker Park & FHS" desc="FCPS Tennis Tournament"",
    "2027-05-14T04:00:00.000Z -> 2027-05-15T04:00:00.000Z [all-day] (America/New_York) "FCPS Tennis Tournament" @ "Baker Park" desc="FCPS Tennis Tournament"",
    "2027-05-15T04:00:00.000Z -> 2027-05-16T04:00:00.000Z [all-day] (America/New_York) "Armed Forces Day" desc="Armed Forces Day"",
    "2027-05-16T04:00:00.000Z -> 2027-05-17T04:00:00.000Z [all-day] (America/New_York) "Eid al-Adha begins at sunset" desc="Eid al-Adha begins at sunset"",
    "2027-05-16T04:00:00.000Z -> 2027-05-17T04:00:00.000Z [all-day] (America/New_York) "Pentecost" desc="Pentecost"",
    "2027-05-17T04:00:00.000Z -> 2027-05-18T04:00:00.000Z [all-day] (America/New_York) "Eid al-Adha" desc="Eid al-Adha"",
    "2027-05-17T04:00:00.000Z -> 2027-05-18T04:00:00.000Z [all-day] (America/New_York) "Public Textbook Display May 17-24" desc="Public Textbook Display May 17-24"",
    "2027-05-17T04:00:00.000Z -> 2027-05-18T04:00:00.000Z [all-day] (America/New_York) "Schools closed" desc="Schools closed"",
    "2027-05-17T04:00:00.000Z -> 2027-05-18T04:00:00.000Z [all-day] (America/New_York) "Teacher Work Day" desc="Teacher Work Day"",
    "2027-05-18T04:00:00.000Z -> 2027-05-19T04:00:00.000Z [all-day] (America/New_York) "ES Hugh B. Nolan Track & Field Event" desc="<p>ES Hugh B. Nolan Track &amp; Field Event</p>\\n<p>rain date 5/25 or 5/26</p>"",
    "2027-05-19T04:00:00.000Z -> 2027-05-20T04:00:00.000Z [all-day] (America/New_York) "MS Hugh B. Nolan Track & Field Event" desc="<p>MS Hugh B. Nolan Track &amp; Field Event</p>\\n<p>rain date 5/25 or 5/26</p>"",
    "2027-05-20T04:00:00.000Z -> 2027-05-21T04:00:00.000Z [all-day] (America/New_York) "Interim reports issued" desc="Interim reports issued"",
    "2027-05-24T04:00:00.000Z -> 2027-05-25T04:00:00.000Z [all-day] (America/New_York) "PTA Council of Frederick County Membership Meeting" desc="PTA Council of Frederick County Membership Meeting"",
    "2027-05-31T04:00:00.000Z -> 2027-06-01T04:00:00.000Z [all-day] (America/New_York) "Memorial Day" desc="Memorial Day"",
    "2027-05-31T04:00:00.000Z -> 2027-06-01T04:00:00.000Z [all-day] (America/New_York) "Schools and offices closed" desc="Schools and offices closed"",
    "2027-06-01T04:00:00.000Z -> 2027-06-02T04:00:00.000Z [all-day] (America/New_York) "Public Textbook Display June 1-8" desc="Public Textbook Display June 1-8"",
    "2027-06-04T04:00:00.000Z -> 2027-06-05T04:00:00.000Z [all-day] (America/New_York) "2-hour early dismissal" desc="2-hour early dismissal"",
    "2027-06-04T04:00:00.000Z -> 2027-06-05T04:00:00.000Z [all-day] (America/New_York) "ES report card issued*" desc="<p>ES report card issued*</p>\\n<p>*Dates may change due to school closures. For high school students taking biology and government end-of-course assessments, report cards will be issued once scores are received from the state (approximately 3 weeks later).</p>"",
    "2027-06-04T04:00:00.000Z -> 2027-06-05T04:00:00.000Z [all-day] (America/New_York) "Last scheduled day of school for students**" desc="<p>Last scheduled day of school for students**</p>\\n<p>**The last scheduled day of school is based on the adopted Board calendar and may change due to inclement weather or other closures. Maryland law requires 180 instructional days. School systems must identify six inclement weather make-up days if a virtual instruction plan has not been approved. If additional days are needed, the school year will be extended beyond the scheduled last day for students. If make-up days are not used, the school year may end earlier while still meeting required instructional days. If inclement weather days have to be made up, the teacher work day will follow the last day for students.</p>"",
    "2027-06-05T04:00:00.000Z -> 2027-06-06T04:00:00.000Z [all-day] (America/New_York) "World Environment Day" desc="World Environment Day"",
    "2027-06-07T04:00:00.000Z -> 2027-06-08T04:00:00.000Z [all-day] (America/New_York) "Inclement Weather Makeup Day" desc="Inclement Weather Makeup Day: If needed for weather related closures, this day becomes a no-school day for students."",
    "2027-06-07T04:00:00.000Z -> 2027-06-08T04:00:00.000Z [all-day] (America/New_York) "Last scheduled day for teachers**" desc="<p>Last scheduled day for teachers**</p>\\n<p>**The last scheduled day of school is based on the adopted Board calendar and may change due to inclement weather or other closures. Maryland law requires 180 instructional days. School systems must identify six inclement weather make-up days if a virtual instruction plan has not been approved. If additional days are needed, the school year will be extended beyond the scheduled last day for students. If make-up days are not used, the school year may end earlier while still meeting required instructional days. If inclement weather days have to be made up, the teacher work day will follow the last day for students.</p>"",
    "2027-06-07T04:00:00.000Z -> 2027-06-08T04:00:00.000Z [all-day] (America/New_York) "Teacher work day" desc="Teacher work day"",
    "2027-06-08T04:00:00.000Z -> 2027-06-09T04:00:00.000Z [all-day] (America/New_York) "Inclement Weather Makeup Day" desc="Inclement Weather Makeup Day: If needed for weather related closures, this day becomes a no-school day for students."",
    "2027-06-09T04:00:00.000Z -> 2027-06-10T04:00:00.000Z [all-day] (America/New_York) "Inclement Weather Makeup Day" desc="Inclement Weather Makeup Day: If needed for weather related closures, this day becomes a no-school day for students."",
    "2027-06-10T04:00:00.000Z -> 2027-06-11T04:00:00.000Z [all-day] (America/New_York) "Inclement Weather Makeup Day" desc="Inclement Weather Makeup Day: If needed for weather related closures, this day becomes a no-school day for students."",
    "2027-06-10T04:00:00.000Z -> 2027-06-11T04:00:00.000Z [all-day] (America/New_York) "Shavout begins at sunset" desc="Shavout begins at sunset"",
    "2027-06-11T04:00:00.000Z -> 2027-06-12T04:00:00.000Z [all-day] (America/New_York) "Inclement Weather Makeup Day" desc="Inclement Weather Makeup Day: If needed for weather related closures, this day becomes a no-school day for students."",
    "2027-06-12T04:00:00.000Z -> 2027-06-13T04:00:00.000Z [all-day] (America/New_York) "Shavout ends at sunset" desc="Shavout ends at sunset"",
    "2027-06-14T04:00:00.000Z -> 2027-06-15T04:00:00.000Z [all-day] (America/New_York) "Flag Day" desc="Flag Day"",
    "2027-06-14T04:00:00.000Z -> 2027-06-15T04:00:00.000Z [all-day] (America/New_York) "Inclement Weather Makeup Day" desc="Inclement Weather Makeup Day: If needed for weather related closures, this day becomes a no-school day for students."",
    "2027-06-16T04:00:00.000Z -> 2027-06-17T04:00:00.000Z [all-day] (America/New_York) "MS/HS report cards issued*" desc="<p>MS/HS report cards issued*</p>\\n<p>*Dates may change due to school closures. For high school students taking biology and government end-of-course assessments, report cards will be issued once scores are received from the state (approximately 3 weeks later).</p>"",
    "2027-06-18T04:00:00.000Z -> 2027-06-19T04:00:00.000Z [all-day] (America/New_York) "Offices closed" desc="Offices closed"",
    "2027-06-19T04:00:00.000Z -> 2027-06-20T04:00:00.000Z [all-day] (America/New_York) "Juneteenth" desc="Juneteenth"",
    "2027-06-20T04:00:00.000Z -> 2027-06-21T04:00:00.000Z [all-day] (America/New_York) "Father's Day" desc="Father's Day"",
    "2027-06-21T04:00:00.000Z -> 2027-06-22T04:00:00.000Z [all-day] (America/New_York) "Summer begins" desc="Summer begins"",
    "2027-06-22T04:00:00.000Z -> 2027-06-23T04:00:00.000Z [all-day] (America/New_York) "ESSL Summerfest" desc="ESSL Summerfest"",
    "2027-07-04T04:00:00.000Z -> 2027-07-05T04:00:00.000Z [all-day] (America/New_York) "Independence Day" desc="Independence Day"",
    "2027-07-05T04:00:00.000Z -> 2027-07-06T04:00:00.000Z [all-day] (America/New_York) "Offices closed" desc="Offices closed"",
    "2027-07-19T04:00:00.000Z -> 2027-07-20T04:00:00.000Z [all-day] (America/New_York) "Public Textbook Display July 19-26" desc="Public Textbook Display July 19-26"",
  ],
  "fixture": "real/fcps-school-district.ics",
  "outcome": "ok",
  "totalBeforeCap": 328,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/allday.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2028-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-02-28T06:00:00.000Z -> 2026-03-01T06:00:00.000Z [all-day] (America/Chicago) "Last day of February"",
    "2026-03-06T06:00:00.000Z -> 2026-03-10T05:00:00.000Z [all-day] (America/Chicago) "Four days spanning US spring-forward"",
    "2026-03-15T05:00:00.000Z -> 2026-03-16T05:00:00.000Z [all-day] (America/Chicago) "One day only, exclusive DTEND"",
    "2026-03-20T05:00:00.000Z -> 2026-03-21T05:00:00.000Z [all-day] (America/Chicago) "One day, DTEND omitted"",
    "2026-03-31T05:00:00.000Z -> 2026-04-01T05:00:00.000Z [all-day] (America/Chicago) "Last day of March"",
    "2026-04-15T05:00:00.000Z -> 2026-04-16T05:00:00.000Z [all-day] (America/Chicago) "Annual all-day" #20260415T000000",
    "2026-12-31T06:00:00.000Z -> 2027-01-01T06:00:00.000Z [all-day] (America/Chicago) "Last day of the year"",
    "2027-04-15T05:00:00.000Z -> 2027-04-16T05:00:00.000Z [all-day] (America/Chicago) "Annual all-day" #20270415T000000",
  ],
  "fixture": "synthetic/allday.ics",
  "outcome": "ok",
  "totalBeforeCap": 8,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/cancelled.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-06-01T15:00:00.000Z -> 2026-06-01T15:30:00.000Z [timed] (America/Chicago) "Confirmed neighbour"",
    "2026-06-01T17:00:00.000Z -> 2026-06-01T17:30:00.000Z [timed] (America/Chicago) <TENTATIVE> "Tentative survives"",
    "2026-06-01T19:00:00.000Z -> 2026-06-01T19:30:00.000Z [timed] (America/Chicago) "No STATUS defaults to confirmed"",
  ],
  "fixture": "synthetic/cancelled.ics",
  "outcome": "ok",
  "totalBeforeCap": 3,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/dst-europe.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "Europe/Berlin",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-03-25T08:00:00.000Z -> 2026-03-25T08:30:00.000Z [timed] (Europe/Berlin) "Weekly across EU spring-forward 2026-03-29" #20260325T090000",
    "2026-03-25T09:00:00.000Z -> 2026-03-25T09:30:00.000Z [timed] (Europe/London) "London weekly across the same EU dates" #20260325T090000",
    "2026-04-01T07:00:00.000Z -> 2026-04-01T07:30:00.000Z [timed] (Europe/Berlin) "Weekly across EU spring-forward 2026-03-29" #20260401T090000",
    "2026-04-01T08:00:00.000Z -> 2026-04-01T08:30:00.000Z [timed] (Europe/London) "London weekly across the same EU dates" #20260401T090000",
    "2026-04-08T07:00:00.000Z -> 2026-04-08T07:30:00.000Z [timed] (Europe/Berlin) "Weekly across EU spring-forward 2026-03-29" #20260408T090000",
    "2026-04-08T08:00:00.000Z -> 2026-04-08T08:30:00.000Z [timed] (Europe/London) "London weekly across the same EU dates" #20260408T090000",
    "2026-10-21T07:00:00.000Z -> 2026-10-21T07:30:00.000Z [timed] (Europe/Berlin) "Weekly across EU fall-back 2026-10-25" #20261021T090000",
    "2026-10-28T08:00:00.000Z -> 2026-10-28T08:30:00.000Z [timed] (Europe/Berlin) "Weekly across EU fall-back 2026-10-25" #20261028T090000",
    "2026-11-04T08:00:00.000Z -> 2026-11-04T08:30:00.000Z [timed] (Europe/Berlin) "Weekly across EU fall-back 2026-10-25" #20261104T090000",
  ],
  "fixture": "synthetic/dst-europe.ics",
  "outcome": "ok",
  "totalBeforeCap": 9,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/dst-us.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/New_York",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-03-04T14:00:00.000Z -> 2026-03-04T14:30:00.000Z [timed] (America/New_York) "Weekly across US spring-forward 2026-03-08" #20260304T090000",
    "2026-03-08T06:00:00.000Z -> 2026-03-08T08:00:00.000Z [timed] (America/New_York) "Meeting spanning the spring-forward gap"",
    "2026-03-11T13:00:00.000Z -> 2026-03-11T13:30:00.000Z [timed] (America/New_York) "Weekly across US spring-forward 2026-03-08" #20260311T090000",
    "2026-03-18T13:00:00.000Z -> 2026-03-18T13:30:00.000Z [timed] (America/New_York) "Weekly across US spring-forward 2026-03-08" #20260318T090000",
    "2026-10-28T13:00:00.000Z -> 2026-10-28T13:30:00.000Z [timed] (America/New_York) "Weekly across US fall-back 2026-11-01" #20261028T090000",
    "2026-11-04T14:00:00.000Z -> 2026-11-04T14:30:00.000Z [timed] (America/New_York) "Weekly across US fall-back 2026-11-01" #20261104T090000",
    "2026-11-11T14:00:00.000Z -> 2026-11-11T14:30:00.000Z [timed] (America/New_York) "Weekly across US fall-back 2026-11-01" #20261111T090000",
  ],
  "fixture": "synthetic/dst-us.ics",
  "outcome": "ok",
  "totalBeforeCap": 7,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/empty-calendar.ics 1`] = `
{
  "calendarName": "Nothing scheduled",
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [],
  "fixture": "synthetic/empty-calendar.ics",
  "outcome": "ok",
  "totalBeforeCap": 0,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/escaped-text.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "includeDescription": true,
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-06-01T13:00:00.000Z -> 2026-06-01T14:00:00.000Z [timed] (America/Chicago) "Pick up milk, eggs, and bread" @ "Aisle 3; back of the store"",
    "2026-06-02T13:00:00.000Z -> 2026-06-02T14:00:00.000Z [timed] (America/Chicago) "Two line title" @ "Room A\\nBuilding 2" desc="First line\\nSecond line\\nThird line"",
    "2026-06-03T13:00:00.000Z -> 2026-06-03T14:00:00.000Z [timed] (America/Chicago) "Path is C:\\\\Users\\\\family\\\\calendar"",
    "2026-06-04T13:00:00.000Z -> 2026-06-04T14:00:00.000Z [timed] (America/Chicago) "Semicolons; commas, newlines\\n and backslashes \\\\ together"",
  ],
  "fixture": "synthetic/escaped-text.ics",
  "outcome": "ok",
  "totalBeforeCap": 4,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/exdate.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-06-01T13:00:00.000Z -> 2026-06-01T13:30:00.000Z [timed] (America/Chicago) "Daily with one skipped day" #20260601T080000",
    "2026-06-02T13:00:00.000Z -> 2026-06-02T13:30:00.000Z [timed] (America/Chicago) "Daily with one skipped day" #20260602T080000",
    "2026-06-04T13:00:00.000Z -> 2026-06-04T13:30:00.000Z [timed] (America/Chicago) "Daily with one skipped day" #20260604T080000",
    "2026-06-05T13:00:00.000Z -> 2026-06-05T13:30:00.000Z [timed] (America/Chicago) "Daily with one skipped day" #20260605T080000",
    "2026-07-01T13:00:00.000Z -> 2026-07-01T13:30:00.000Z [timed] (America/Chicago) "Daily with two skipped days on one line" #20260701T080000",
    "2026-07-03T13:00:00.000Z -> 2026-07-03T13:30:00.000Z [timed] (America/Chicago) "Daily with two skipped days on one line" #20260703T080000",
    "2026-07-05T13:00:00.000Z -> 2026-07-05T13:30:00.000Z [timed] (America/Chicago) "Daily with two skipped days on one line" #20260705T080000",
    "2026-08-10T05:00:00.000Z -> 2026-08-11T05:00:00.000Z [all-day] (America/Chicago) "All-day series with a skipped date" #20260810T000000",
    "2026-08-11T05:00:00.000Z -> 2026-08-12T05:00:00.000Z [all-day] (America/Chicago) "All-day series with a skipped date" #20260811T000000",
    "2026-08-13T05:00:00.000Z -> 2026-08-14T05:00:00.000Z [all-day] (America/Chicago) "All-day series with a skipped date" #20260813T000000",
  ],
  "fixture": "synthetic/exdate.ics",
  "outcome": "ok",
  "totalBeforeCap": 10,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/floating-times.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-03-04T15:00:00.000Z -> 2026-03-04T15:30:00.000Z [timed] (America/Chicago) "Floating weekly across US spring-forward" #20260304T090000",
    "2026-03-11T14:00:00.000Z -> 2026-03-11T14:30:00.000Z [timed] (America/Chicago) "Floating weekly across US spring-forward" #20260311T090000",
    "2026-03-18T14:00:00.000Z -> 2026-03-18T14:30:00.000Z [timed] (America/Chicago) "Floating weekly across US spring-forward" #20260318T090000",
    "2026-06-14T08:00:00.000Z -> 2026-06-14T09:00:00.000Z [timed] (UTC) "Explicit UTC for contrast"",
    "2026-06-14T13:00:00.000Z -> 2026-06-14T14:00:00.000Z [timed] (America/Chicago) "No TZID and no Z"",
  ],
  "fixture": "synthetic/floating-times.ics",
  "outcome": "ok",
  "totalBeforeCap": 5,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/line-folding.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-06-01T13:00:00.000Z -> 2026-06-01T14:00:00.000Z [timed] (America/Chicago) "This summary is deliberately longer than seventy-five octets so that it must be folded across a continuation line per RFC 5545 section 3.1" @ "1600 Pennsylvania Avenue Northwest, Washington, DC 20500, United States of America"",
    "2026-06-02T13:00:00.000Z -> 2026-06-02T14:00:00.000Z [timed] (America/Chicago) "Continuation lines may begin with a horizontal tab rather than a space and must unfold identically"",
    "2026-06-03T13:00:00.000Z -> 2026-06-03T14:00:00.000Z [timed] (America/Chicago) "One two three four five six seven eight nine ten eleven twelve thirteen fourteen fifteen sixteen seventeen eighteen nineteen twenty twenty-one twenty-two twenty-three"",
  ],
  "fixture": "synthetic/line-folding.ics",
  "outcome": "ok",
  "totalBeforeCap": 3,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/malformed-garbage.ics 1`] = `
{
  "code": "PARSE_FAILED",
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "fixture": "synthetic/malformed-garbage.ics",
  "message": "The calendar feed could not be parsed.",
  "outcome": "error",
}
`;

exports[`fixture snapshots > synthetic/malformed-html.ics 1`] = `
{
  "code": "PARSE_FAILED",
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "fixture": "synthetic/malformed-html.ics",
  "message": "The calendar feed could not be parsed.",
  "outcome": "error",
}
`;

exports[`fixture snapshots > synthetic/malformed-truncated.ics 1`] = `
{
  "code": "PARSE_FAILED",
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "fixture": "synthetic/malformed-truncated.ics",
  "message": "The calendar feed could not be parsed.",
  "outcome": "error",
}
`;

exports[`fixture snapshots > synthetic/partial-damage.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-06-01T15:00:00.000Z -> 2026-06-01T16:00:00.000Z [timed] (America/Chicago) "This one is fine and must still appear"",
    "2026-06-03T19:00:00.000Z -> 2026-06-03T20:00:00.000Z [timed] (America/Chicago) "Override with no master in this file"",
  ],
  "fixture": "synthetic/partial-damage.ics",
  "outcome": "ok",
  "totalBeforeCap": 2,
  "truncated": false,
  "warnings": [
    "EVENT_SKIPPED | - | 1 event could not be read and was skipped; the rest of the calendar is unaffected.",
    "MISSING_UID | - | An event has no UID and was skipped.",
    "MISSING_DTSTART | no-dtstart@synthetic | An event has no usable DTSTART and was skipped.",
    "ORPHAN_OVERRIDE | orphan-override@synthetic | A modified occurrence arrived without its parent event; showing it on its own.",
  ],
}
`;

exports[`fixture snapshots > synthetic/rdate.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-06-01T13:00:00.000Z -> 2026-06-01T14:00:00.000Z [timed] (America/Chicago) "Weekly plus one extra date" #20260601T080000",
    "2026-06-08T13:00:00.000Z -> 2026-06-08T14:00:00.000Z [timed] (America/Chicago) "Weekly plus one extra date" #20260608T080000",
    "2026-06-19T13:00:00.000Z -> 2026-06-19T14:00:00.000Z [timed] (America/Chicago) "Weekly plus one extra date" #20260619T080000",
    "2026-09-01T17:00:00.000Z -> 2026-09-01T18:00:00.000Z [timed] (America/Chicago) "No RRULE, dates listed explicitly" #20260901T120000",
    "2026-09-03T17:00:00.000Z -> 2026-09-03T18:00:00.000Z [timed] (America/Chicago) "No RRULE, dates listed explicitly" #20260903T120000",
    "2026-09-05T17:00:00.000Z -> 2026-09-05T18:00:00.000Z [timed] (America/Chicago) "No RRULE, dates listed explicitly" #20260905T120000",
  ],
  "fixture": "synthetic/rdate.ics",
  "outcome": "ok",
  "totalBeforeCap": 6,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/recurrence-id-overrides.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-06-01T13:00:00.000Z -> 2026-06-01T13:30:00.000Z [timed] (America/Chicago) "Standup" #20260601T080000",
    "2026-06-02T19:00:00.000Z -> 2026-06-02T19:30:00.000Z [timed] (America/Chicago) "Standup" #20260602T080000",
    "2026-06-03T13:00:00.000Z -> 2026-06-03T14:00:00.000Z [timed] (America/Chicago) "Standup - retro instead" #20260603T080000",
    "2026-06-05T13:00:00.000Z -> 2026-06-05T13:30:00.000Z [timed] (America/Chicago) "Standup" #20260605T080000",
  ],
  "fixture": "synthetic/recurrence-id-overrides.ics",
  "outcome": "ok",
  "totalBeforeCap": 4,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/rrule-comprehensive.ics 1`] = `
{
  "calendarName": "RRULE coverage",
  "config": {
    "targetTimezone": "America/New_York",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "1997-01-01T00:00:00Z",
  },
  "events": [
    "1997-08-05T13:00:00.000Z -> 1997-08-05T13:30:00.000Z [timed] (America/New_York) "RFC 5545 WKST=MO example" #19970805T090000",
    "1997-08-05T14:00:00.000Z -> 1997-08-05T14:30:00.000Z [timed] (America/New_York) "RFC 5545 WKST=SU example" #19970805T100000",
    "1997-08-10T13:00:00.000Z -> 1997-08-10T13:30:00.000Z [timed] (America/New_York) "RFC 5545 WKST=MO example" #19970810T090000",
    "1997-08-17T14:00:00.000Z -> 1997-08-17T14:30:00.000Z [timed] (America/New_York) "RFC 5545 WKST=SU example" #19970817T100000",
    "1997-08-19T13:00:00.000Z -> 1997-08-19T13:30:00.000Z [timed] (America/New_York) "RFC 5545 WKST=MO example" #19970819T090000",
    "1997-08-19T14:00:00.000Z -> 1997-08-19T14:30:00.000Z [timed] (America/New_York) "RFC 5545 WKST=SU example" #19970819T100000",
    "1997-08-24T13:00:00.000Z -> 1997-08-24T13:30:00.000Z [timed] (America/New_York) "RFC 5545 WKST=MO example" #19970824T090000",
    "1997-08-31T14:00:00.000Z -> 1997-08-31T14:30:00.000Z [timed] (America/New_York) "RFC 5545 WKST=SU example" #19970831T100000",
    "2026-01-05T14:00:00.000Z -> 2026-01-05T14:30:00.000Z [timed] (America/New_York) "Daily count 3" #20260105T090000",
    "2026-01-05T16:00:00.000Z -> 2026-01-05T16:30:00.000Z [timed] (America/New_York) "Every other week Mon and Wed" #20260105T110000",
    "2026-01-06T13:00:00.000Z -> 2026-01-06T13:30:00.000Z [timed] (America/New_York) "Weekly until a UTC instant" #20260106T080000",
    "2026-01-06T14:00:00.000Z -> 2026-01-06T14:30:00.000Z [timed] (America/New_York) "Daily count 3" #20260106T090000",
    "2026-01-07T14:00:00.000Z -> 2026-01-07T14:30:00.000Z [timed] (America/New_York) "Daily count 3" #20260107T090000",
    "2026-01-07T16:00:00.000Z -> 2026-01-07T16:30:00.000Z [timed] (America/New_York) "Every other week Mon and Wed" #20260107T110000",
    "2026-01-13T13:00:00.000Z -> 2026-01-13T13:30:00.000Z [timed] (America/New_York) "Weekly until a UTC instant" #20260113T080000",
    "2026-01-15T19:00:00.000Z -> 2026-01-15T19:30:00.000Z [timed] (America/New_York) "Fifteenth of the month" #20260115T140000",
    "2026-01-19T16:00:00.000Z -> 2026-01-19T16:30:00.000Z [timed] (America/New_York) "Every other week Mon and Wed" #20260119T110000",
    "2026-01-20T13:00:00.000Z -> 2026-01-20T13:30:00.000Z [timed] (America/New_York) "Weekly until a UTC instant" #20260120T080000",
    "2026-01-21T16:00:00.000Z -> 2026-01-21T16:30:00.000Z [timed] (America/New_York) "Every other week Mon and Wed" #20260121T110000",
    "2026-01-27T13:00:00.000Z -> 2026-01-27T13:30:00.000Z [timed] (America/New_York) "Weekly until a UTC instant" #20260127T080000",
    "2026-01-30T21:00:00.000Z -> 2026-01-30T21:30:00.000Z [timed] (America/New_York) "Last weekday of the month" #20260130T160000",
    "2026-02-02T16:00:00.000Z -> 2026-02-02T16:30:00.000Z [timed] (America/New_York) "Every other week Mon and Wed" #20260202T110000",
    "2026-02-04T16:00:00.000Z -> 2026-02-04T16:30:00.000Z [timed] (America/New_York) "Every other week Mon and Wed" #20260204T110000",
    "2026-02-15T19:00:00.000Z -> 2026-02-15T19:30:00.000Z [timed] (America/New_York) "Fifteenth of the month" #20260215T140000",
    "2026-02-27T21:00:00.000Z -> 2026-02-27T21:30:00.000Z [timed] (America/New_York) "Last weekday of the month" #20260227T160000",
    "2026-03-15T18:00:00.000Z -> 2026-03-15T18:30:00.000Z [timed] (America/New_York) "Fifteenth of the month" #20260315T140000",
    "2026-03-31T20:00:00.000Z -> 2026-03-31T20:30:00.000Z [timed] (America/New_York) "Last weekday of the month" #20260331T160000",
  ],
  "fixture": "synthetic/rrule-comprehensive.ics",
  "outcome": "ok",
  "totalBeforeCap": 27,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/vtimezone-custom.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-01-15T15:30:00.000Z -> 2026-01-15T16:30:00.000Z [timed] (America/Chicago) "Same TZID in winter"",
    "2026-06-15T14:30:00.000Z -> 2026-06-15T15:30:00.000Z [timed] (America/Chicago) "References the VTIMEZONE above"",
  ],
  "fixture": "synthetic/vtimezone-custom.ics",
  "outcome": "ok",
  "totalBeforeCap": 2,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/window-straddle.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2026-06-16T00:00:00Z",
    "windowStart": "2026-06-15T00:00:00Z",
  },
  "events": [
    "2026-06-01T00:00:00.000Z -> 2026-07-01T00:00:00.000Z [timed] (UTC) "Starts before and ends after the whole window"",
    "2026-06-14T22:00:00.000Z -> 2026-06-15T06:00:00.000Z [timed] (UTC) "Starts before the window and ends inside it"",
    "2026-06-15T12:00:00.000Z -> 2026-06-15T12:00:00.000Z [timed] (UTC) "Zero length instant inside the window"",
    "2026-06-15T22:00:00.000Z -> 2026-06-16T06:00:00.000Z [timed] (UTC) "Starts inside the window and ends after it"",
  ],
  "fixture": "synthetic/window-straddle.ics",
  "outcome": "ok",
  "totalBeforeCap": 4,
  "truncated": false,
  "warnings": [],
}
`;

exports[`fixture snapshots > synthetic/windows-timezones.ics 1`] = `
{
  "calendarName": null,
  "config": {
    "targetTimezone": "America/Chicago",
    "windowEnd": "2027-01-01T00:00:00Z",
    "windowStart": "2026-01-01T00:00:00Z",
  },
  "events": [
    "2026-06-15T08:00:00.000Z -> 2026-06-15T09:00:00.000Z [timed] (Europe/London) "GMT Standard Time is really Europe/London"",
    "2026-06-15T13:00:00.000Z -> 2026-06-15T14:00:00.000Z [timed] (America/New_York) "Authored with a Windows zone name"",
    "2026-06-15T14:00:00.000Z -> 2026-06-15T15:00:00.000Z [timed] (America/Chicago) "Producer-prefixed TZID"",
    "2026-06-15T14:00:00.000Z -> 2026-06-15T15:00:00.000Z [timed] (America/Chicago) "Unresolvable TZID falls back to the target zone"",
  ],
  "fixture": "synthetic/windows-timezones.ics",
  "outcome": "ok",
  "totalBeforeCap": 4,
  "truncated": false,
  "warnings": [
    "WINDOWS_TIMEZONE_MAPPED | outlook-eastern@synthetic | Timezone "Eastern Standard Time" is not an IANA name; treating it as America/New_York.",
    "WINDOWS_TIMEZONE_MAPPED | outlook-gmt@synthetic | Timezone "GMT Standard Time" is not an IANA name; treating it as Europe/London.",
    "WINDOWS_TIMEZONE_MAPPED | mozilla-prefixed@synthetic | Timezone "/mozilla.org/20050126_1/America/Chicago" is not an IANA name; treating it as America/Chicago.",
    "UNRESOLVED_TIMEZONE | unknown-zone@synthetic | Timezone "Middle/Earth" is unknown; falling back to the target timezone.",
  ],
}
`;
